--- a/estilo/style.css
+++ b/estilo/style.css
@@ -57,6 +57,10 @@ section{
     font-size: 3.0vw;
 }
 
+section > p{
+    padding-bottom: 2em;
+}
+
 section.normal {
     background-color: white;
     color: black;
@@ -65,15 +69,28 @@ section.normal {
 
 section.imagem > p{
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.124);
+    background-color: rgba(0, 0, 0, 0.303);
     display: inline-block;
+    text-shadow: 1px 1px 0px 0px rgba(0, 0, 0, 0.378); 
 }
 
 section.imagem {
 background-color: rgba(0, 0, 0, 0.515);
 color: white;
+box-shadow: inset 6px 6px 13px rgba(0, 0, 0, 0.261);
+background-attachment: fixed;
 }
 
+section#img01{
+background-image: url('../imagens/background001.jpg');
+background-position: right center;
+background-size: cover;
+}
+
+section#img02{
+background-image: url("../imagens/background002.jpg");
+background-size: cover;
+}
 
 footer{
     background-color: black;
