--- a/estilo/style.css
+++ b/estilo/style.css
@@ -59,6 +59,7 @@ section{
 
 section > p{
     padding-bottom: 2em;
+    
 }
 
 section.normal {
@@ -71,7 +72,8 @@ section.imagem > p{
     padding: 5px;
     background-color: rgba(0, 0, 0, 0.212);
     display: inline-block;
-    text-shadow: 1px 1px 0px 0px rgba(0, 0, 0, 0.378); 
+    text-shadow: 1px 1px 0px 0px rgba(0, 0, 0, 0.378);
+     
 }
 
 section.imagem {
@@ -97,5 +99,7 @@ footer{
     text-align: center;
     color: white;
     padding: 10px;
+    font-size: 14px;   
+    
 }
 
